--- a/web/app/templates/checks/addedit.html
+++ b/web/app/templates/checks/addedit.html
@@ -60,7 +60,9 @@
                         {% with %} {% set  specificform = form.block_number %} {% include "helpers/field_form.html" %} {% endwith %}
                         {% with %} {% set  specificform = form.link %} {% include "helpers/field_form.html" %} {% endwith %}
                         {% with %} {% set  specificform = form.amount %} {% include "helpers/field_form.html" %} {% endwith %}
-                        {% with %} {% set  specificform_boolean = form.is_first_payment %} {% include "helpers/boolean_field.html" %} {% endwith %}
+                        {% if add_or_edit == "add" %}
+                          {% with %} {% set  specificform_boolean = form.is_first_payment %} {% include "helpers/boolean_field.html" %} {% endwith %}
+                        {% endif %}
                     </div>
                     <p id="save_check" class="control-label">{{ form.submit() }}</p>
                 </form>
