--- a/web/app/templates/checks/addedit.html
+++ b/web/app/templates/checks/addedit.html
@@ -3,46 +3,16 @@
 {% block scripts %}
     {{super()}}
      <script type="text/javascript">
-        // Генерация OutLook файла, который потом можно будет открыть
-        function generate_draft(){
-          var mail = "Пока сообщение заглушка"
-          var email = "{{ student.email }}"
-          var combining = /[\u0300-\u036F]/g;
-          var mailHtm =`<p> ${mail} <p>`;
-          var emailTo = email;
-          var emailsubject = `Пока тема заглушка`;
-          var emlCont = 'To: '+ emailTo + '\n';
-          emlCont += 'Subject: ' + emailsubject + '\n';
-          emlCont += 'X-Unsent: 1'+'\n';
-          emlCont += 'Content-Type: text/html; charset=utf-8;'+'\n';
-          emlCont += ''+'\n';
-          emlCont += "<!DOCTYPE html><html><head></head><body>" + mailHtm + "</body></html>";
-          var textFile = null;
-          var data = new Blob([emlCont], {type: 'text/plain'});
-          if (textFile !== null) {
-              window.URL.revokeObjectURL(textFile);
-          }
-          textFile = window.URL.createObjectURL(data);
-          // Для загрузки файла создаем ссылку и кликаем на нее
-          // Однако если за раз нужно загрузить несколько писем, ссылку создавать не нужно, нужно просто изменить ее href и возможно название
-          if (document.getElementById('fileLink') == undefined){
-          var a = document.createElement('a');
-          var linkText = document.createTextNode("fileLink");
-          a.appendChild(linkText);
-          a.id = 'fileLink';
-          a.style.visibility = "hidden";
-          document.body.appendChild(a);
-        }
-        document.getElementById('fileLink').href = textFile;
-        document.getElementById('fileLink').download = emailsubject+".eml";
-        // В конце кликаем
-        document.getElementById('fileLink').click();
-        }
 
      {% if not flag_emails_from_default_mail %}
-     $('#save_check>input').click(function(event){
-       generate_draft()
-     });
+         $('#save_check>input').click(function(event){
+            if ($("#is_first_payment").prop("checked")) {
+                generate_draft("Первая оплата", "stepan.barantsev@gmail.com", "Первая оплата")
+            }
+            else {
+                generate_draft("НЕ первая оплата", "stepan.barantsev@gmail.com", "НЕ первая оплата")
+            }
+         });
      {% endif %}
      </script>
 {% endblock %}
