Чеки в виде ссылок

--- a/web/app/templates/checks/index.html
+++ b/web/app/templates/checks/index.html
@@ -24,7 +24,7 @@
                                 {% endif %}
                             </td>
                             <td>
-                                {{ check.link }}
+                                <a href="{{ check.link }}" target="_blank">{{ check.link }}</a>
                             </td>
                             <td>
                                 {{ check.amount }}
