--- a/web/app/templates/email/payed_block.html
+++ b/web/app/templates/email/payed_block.html
@@ -4,4 +4,4 @@
 
 <p>Ссылка на электронный чек: <a href="{{ check_link }}">{{ check_link }}</a></p>
 
-<p>С уважением, Баранцев Степан</p>
+<p>С уважением, {{ trainer_name }}</p>
