--- a/web/app/templates/email/payed_first_time.html
+++ b/web/app/templates/email/payed_first_time.html
@@ -16,4 +16,4 @@
 
 <p>Дальнейшие инструкции находятся в СДО (Правила участия)</p>
 
-<p>С уважением, Баранцев Степан</p>
+<p>С уважением, {{ trainer_name }}</p>
