Изменил текст сообщения

--- a/web/app/templates/checks/addedit.html
+++ b/web/app/templates/checks/addedit.html
@@ -19,7 +19,7 @@
 
 Ссылка на курс: <a href="http://software-testing.ru/lms/course/view.php?id={{ course_id }}">http://software-testing.ru/lms/course/view.php?id={{ course_id }}<a/> <br/><br/>
 
-Не забудьте связаться со мной в одном из нижеперечисленных мессенджеров. Там Вы сможете задать любые вопросы касательно содержимого курса. <br/><br/>
+Не забудьте связаться со мной в мессенджере telegram. Там Вы сможете задать любые вопросы касательно содержимого курса. <br/><br/>
 
 Telegram: <a href="https://t.me/{{ telegram_nickname }}">https://t.me/{{ telegram_nickname }}<a/> <br/><br/>
 
