--- a/web/app/templates/email/payed_first_time.html
+++ b/web/app/templates/email/payed_first_time.html
@@ -8,7 +8,7 @@
 
 <p>Ссылка на курс: <a href="http://software-testing.ru/lms/course/view.php?id={{ course_id }}">http://software-testing.ru/lms/course/view.php?id={{ course_id }}</a></p>
 
-<p>Не забудьте связаться со мной в одном из нижеперечисленных мессенджеров. Там Вы сможете задать любые вопросы касательно содержимого курса.</p>
+<p>Не забудьте связаться со мной в мессенджере telegram. Там Вы сможете задать любые вопросы касательно содержимого курса.</p>
 
 <p>Telegram: <a href="https://t.me/{{ telegram_nickname }}">https://t.me/{{ telegram_nickname }}</a></p>
 
