Отправка регистрационного кода студенту

--- a/web/app/templates/checks/addedit.html
+++ b/web/app/templates/checks/addedit.html
@@ -23,6 +23,10 @@
 
 Telegram: <a href="https://t.me/{{ telegram_nickname }}">https://t.me/{{ telegram_nickname }}<a/> <br/><br/>
 
+Также Вы можете зарегистрироваться у telegram-бота, у которого можно будет получить дополнительную информацию о курсе. Ссылка на бота: https://t.me/test24422424_bot
+
+Чтобы зарегистрироваться, используйте следующий код: {{ registration_code }} (введите его боту, когда он попросит).
+
 Если Вы не имеете возможности использовать Telegram, то связь может осуществляться в другом мессенджере (по договоренности), например в скайпе. Однако желательно все же осуществлять связь именно в Telegram. <br/><br/>
 
 Дальнейшие инструкции находятся в СДО (Правила участия) <br/><br/>
