--- a/web/app/templates/email/payed_first_time.html
+++ b/web/app/templates/email/payed_first_time.html
@@ -12,6 +12,10 @@
 
 <p>Telegram: <a href="https://t.me/{{ telegram_nickname }}">https://t.me/{{ telegram_nickname }}</a></p>
 
+<p>Также Вы можете зарегистрироваться у telegram-бота, у которого можно будет получить дополнительную информацию о курсе. Ссылка на бота: https://t.me/test24422424_bot</p>
+
+<p>Чтобы зарегистрироваться, используйте следующий код: {{ registration_code }} (введите его боту, когда он попросит).</p>
+
 <p>Если Вы не имеете возможности использовать Telegram, то связь может осуществляться в другом мессенджере (по договоренности), например в скайпе. Однако желательно все же осуществлять связь именно в Telegram.</p>
 
 <p>Дальнейшие инструкции находятся в СДО (Правила участия)</p>
