Дополнение про сертификат

--- a/web/app/templates/email/certificate.html
+++ b/web/app/templates/email/certificate.html
@@ -4,4 +4,6 @@
 
 <p>Ссылка на сертификат: <a href="{{ cert_link }}"></a>{{ cert_link }}</p>
 
+<p>Вы можете разместить ссылку на сертификат в своих резюме, публичных профилях и любых других общедоступных местах.</p>
+
 <p>С уважением, {{ trainer_name }}</p>
