Добавил в письма ссылку на отзыв

--- a/web/app/templates/email/certificate.html
+++ b/web/app/templates/email/certificate.html
@@ -8,4 +8,6 @@
 
 <p>Также Вы получаете 15% скидку на любой курс из нашего расписания, при условии оплаты курса в течение месяца. Вы можете использовать скидку для себя или передать ее другу. При регистрации на курс просто сообщите ваш e-mail и код купона на скидку: “{{ discount_coupon }}”.</p>
 
+<p>Кроме того, я буду весьма признателен, если Вы напишете отзыв по результатам прохождения курса: <a href="{{ review_link }}">{{ review_link }}</a></p>
+
 <p>С уважением, {{ trainer_name }}</p>
