--- a/web/app/templates/base.html
+++ b/web/app/templates/base.html
@@ -25,6 +25,9 @@
                     {% if current_user.name == none or current_user.name == '' or current_user.telegram_id == none or current_user.telegram_id == '' or current_user.telegram_nickname == none or current_user.telegram_nickname == '' or current_user.lms_id == none or current_user.lms_id == '' %}
                         <p style="color: white">Для корректной работы системы заполните данные <a style="color: white; text-decoration: underline;" href="{{ url_for('profile.editprofile') }}">профиля!</a></p>
                     {% endif %}
+                    {% if current_user.flag_is_messages_from_bot_is_delivered == false %}
+                        <p style="color: white">Кажется Вам не доходят сообщения от бота в телеграм. Проверьте это, чтобы не пропускать важную информацию.</p>
+                    {% endif %}
                 </div>
                 <div class="nav navbar-nav navbar-right">
                     <div class="btn-group">
