--- a/web/app/templates/students/addedit.html
+++ b/web/app/templates/students/addedit.html
@@ -25,6 +25,7 @@
                             <br/><br/>
                             {% set specificform = form.lms_email_locked %} {% include "helpers/locked_field_form.html" %}
                             {% set specificform = form.telegram_id_locked %} {% include "helpers/locked_field_form.html" %}
+                            {% set specificform = form.cert_link_locked %} {% include "helpers/locked_field_form.html" %}
                             {% set specificform = form.name_locked %} {% include "helpers/locked_field_form.html" %}
                             {% set specificform = form.registration_code_locked %} {% include "helpers/locked_field_form.html" %}
                         {% endif %}
