--- a/web/app/templates/students/index.html
+++ b/web/app/templates/students/index.html
@@ -52,7 +52,10 @@
                     {% endif %}
                     <th style="border: 1px solid black;">Email</th>
                     <th style="border: 1px solid black;">Telegram id</th>
-                    {% if student_filter  == "active" or student_filter == "freezed" or student_filter == "any" %}
+                    {% if student_filter == "finished" %}
+                        <th style="border: 1px solid black;">Сертификат</th>
+                    {% endif %}
+                    {% if student_filter == "active" or student_filter == "freezed" or student_filter == "any" %}
                         {% if sort_type == "days" %}
                             <th style="border: 1px solid black;">Дни<i id="sort_name" class="fa fa-fw fa-sort" onClick="location = '{{ url_for('students.index', course_id=course_id, sort_type='days_reversed', student_filter=student_filter, student_search=student_search) }}'"></i></th>
                         {% else %}
@@ -77,7 +80,10 @@
                                 {{ student.telegram_id }}
                             {% endif %}
                         </td>
-                        {% if student_filter  == "active" or student_filter == "freezed" or student_filter == "any"%}
+                        {% if student_filter == "finished" %}
+                            <td style="border: 1px solid black;"> {{ student.cert_link }} </td>
+                        {% endif %}
+                        {% if student_filter == "active" or student_filter == "freezed" or student_filter == "any"%}
                             <td style="border: 1px solid black;" id="td_days_{{ student.id }}">
                             {{student.number_of_days}}
                             </td>
