--- a/web/app/templates/error/403.html
+++ b/web/app/templates/error/403.html
@@ -2,5 +2,5 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
-    <h1> Ошибка 403 </h1>
+    <h1> Ошибка доступа! </h1>
 {% endblock %}
