Поменял ссылку на бота

--- a/web/app/templates/checks/addedit.html
+++ b/web/app/templates/checks/addedit.html
@@ -23,7 +23,7 @@
 
 Telegram: <a href="https://t.me/{{ telegram_nickname }}">https://t.me/{{ telegram_nickname }}<a/> <br/><br/>
 
-Также Вы можете зарегистрироваться у telegram-бота, у которого можно будет получить дополнительную информацию о курсе. Ссылка на бота: https://t.me/test24422424_bot
+Также Вы можете зарегистрироваться у telegram-бота, у которого можно будет получить дополнительную информацию о курсе. Ссылка на бота: https://t.me/PythonForBeginnersBot
 
 Чтобы зарегистрироваться, используйте следующий код: {{ registration_code }} (введите его боту, когда он попросит).
 
