--- a/web/app/templates/email/payed_first_time.html
+++ b/web/app/templates/email/payed_first_time.html
@@ -12,7 +12,7 @@
 
 <p>Telegram: <a href="https://t.me/{{ telegram_nickname }}">https://t.me/{{ telegram_nickname }}</a></p>
 
-<p>Также Вы можете зарегистрироваться у telegram-бота, у которого можно будет получить дополнительную информацию о курсе. Ссылка на бота: https://t.me/test24422424_bot</p>
+<p>Также Вы можете зарегистрироваться у telegram-бота, у которого можно будет получить дополнительную информацию о курсе. Ссылка на бота: https://t.me/PythonForBeginnersBot</p>
 
 <p>Чтобы зарегистрироваться, используйте следующий код: {{ registration_code }} (введите его боту, когда он попросит).</p>
 
